<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentSettings">

    <!-- Set the boundaries of each section in settings. -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".85" />
    <!-- *********************************************** -->

    <!-- Section 1 - Board Size -->
    <LinearLayout
        android:id="@+id/ll_section_one_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_section_one_buttons"
        >

        <!-- Title Bar for this Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="@drawable/title_label"
            android:text="@string/fragment_settings_section_one_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_section_one_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_section_one_title"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        >

        <!-- Buttons to select Board Size -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/board_size_three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/square_button"
            android:text="@string/fragment_settings_boardsize_1"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/board_size_four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/square_button"
            android:text="@string/fragment_settings_boardsize_2"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/board_size_five"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/square_button"
            android:text="@string/fragment_settings_boardsize_3"
            android:textSize="30sp" />

    </LinearLayout>

    <!-- Section 2 - Win Conditions -->
    <LinearLayout
        android:id="@+id/ll_section_two_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintBottom_toTopOf="@id/ll_section_two_buttons"
        >

        <!-- Title Bar for this Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="@drawable/title_label"
            android:text="@string/fragment_settings_section_two_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_section_two_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_section_two_title"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        >

        <!-- Buttons to select Board Size -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/win_condition_three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/square_button"
            android:text="@string/fragment_settings_wincondition_1"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/win_condition_four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/square_button"
            android:text="@string/fragment_settings_wincondition_2"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/win_condition_five"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/square_button"
            android:text="@string/fragment_settings_wincondition_3"
            android:textSize="30sp" />

    </LinearLayout>

    <!-- Section 3 - Character Selection -->
    <LinearLayout
        android:id="@+id/ll_section_three_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:background="@drawable/title_label"
            android:text="@string/fragment_settings_section_three_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_section_three_avatars"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline4">

       <TextView
           android:id="@+id/p1_label"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:gravity="center"
           android:layout_margin="10dp"
           android:background="@drawable/coloured_label"
           android:text="@string/fragment_settings_character_selection_p1"
           android:textSize="30sp"
           android:textStyle="bold"
           />

        <TextView
            android:id="@+id/p2_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/coloured_label"
            android:text="@string/fragment_settings_character_selection_p2"
            android:textSize="30sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_section_three_icons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/p1_logo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/coloured_logo_x"
            android:gravity="center"
            android:text="@string/fragment_settings_character_selection_X"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/swap_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:src="@drawable/swap"
            android:scaleType="fitCenter"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/p2_logo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/coloured_logo_o"
            android:gravity="center"
            android:text="@string/fragment_settings_character_selection_O"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>