<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_user_selection"
    tools:context=".fragment_user_selection">

    <!-- Set the boundaries of each section in settings. -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80" />

    <!-- *********************************************** -->

    <!-- Section 1 - Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/title_label"
        android:text="@string/fragment_user_selection_profiles"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"/>

    <!-- ************************************************************ -->

    <!-- Section 2 - Profile Selection -->

    <!-- Constraint Layout to store a maximum of nine profiles. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profiles_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline2" >

        <!-- Guidelines to organise profile icons. -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/profilesGuideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".42" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/profilesGuideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".58" />

        <!-- ******************************************* -->

        <!-- Create frame layout for each square so that image and name may be displayed. -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/profile_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/profilesGuideline1">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/profile1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/profile_select"
                android:padding="30dp"
                android:src="@drawable/profile_pic"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/profile1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"
                android:clickable="false"/>

        </FrameLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profilesGuideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/profilesGuideline2"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textAlignment="center"
            android:text="@string/VS" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/profile_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profilesGuideline2"
            app:layout_constraintEnd_toEndOf="parent  "
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/profile2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/profile_select"
                android:padding="30dp"
                android:src="@drawable/profile_pic"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/profile2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"
                android:clickable="false" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ********************************************************************************** -->

    <!-- Section 3 - Action Bar -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Guideline to separate action buttons. -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/actionBar_guideline1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/actionBar_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".66" />
        <!-- ************************************** -->

        <!-- Buttons. -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/back"
            android:background="@drawable/square_button"
            app:layout_constraintTop_toBottomOf="@id/actionBar_guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/edit"
            android:background="@drawable/square_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/actionBar_guideline1"
            app:layout_constraintBottom_toBottomOf="@id/actionBar_guideline2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/play"
            android:background="@drawable/square_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/actionBar_guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/actionBar_guideline2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ******************************************************************** -->

</androidx.constraintlayout.widget.ConstraintLayout>